# Pub-Streamer

./: .gitignore  README.md  build.py  build_hook.ps1  build_native.ps1  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
hook/: hook_audio.cpp
locale/ja/LC_MESSAGES/: pubstreamer.mo  pubstreamer.po
native/: CMakeLists.txt
native/audio_hook/: CMakeLists.txt  dllmain.c  hook_dsound.c  hook_engine.c  hook_engine.h  hook_wasapi.c  hook_winmm.c  shmem.h
native/injector/: CMakeLists.txt  injector.c
plugins/tts/: aws.py  azure.py  edge.py  elevenlabs.py  example.py  google.py  gtts.py  openai_tts.py  piper.py  sapi.py  star.py
pubstreamer/: config.py  i18n.py
pubstreamer/audio/: capture_asio.py  capture_device.py  capture_file.py  capture_legacy.py  capture_mastodon.py  capture_process.py  capture_sound_events.py  capture_tts.py  capture_url.py  mixer.py  plc_bridge.py  vst_chain.py
pubstreamer/audiopub/: client.py
pubstreamer/chat/: sse_client.py  tts.py
pubstreamer/mastodon/: client.py  oauth.py
pubstreamer/recording/: recorder.py
pubstreamer/streaming/: ffmpeg_stream.py
pubstreamer/tts/: __init__.py  aws.py  azure.py  base.py  edge.py  elevenlabs.py  google.py  gtts.py  openai_tts.py  piper.py  sapi.py  star.py
pubstreamer/ui/: app.py  chat_panel.py  mastodon_panel.py  recording_panel.py  source_panel.py  stream_panel.py  vst_panel.py
sounds/default/: credits.txt
tools/: compile_translations.py
