[project]
name = "pub-streamer"
version = "0.1.0"
description = "Lightweight all-in-one Audio Pub streaming client"
requires-python = ">=3.11"
dependencies = [
    "pyaudiowpatch>=0.2.12",
    "numpy>=1.24",
    "pedalboard>=0.9",
    "pywin32>=306",
    "httpx>=0.27",
    "comtypes>=1.4",
    "wxpython>=4.2",
    "google-cloud-texttospeech>=2.36.0",
    "google-api-core>=2.30.3",
    "gtts>=2.5.4",
    "piper-tts>=1.4.2",
    "edge-tts>=7.2.8",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "nuitka>=4.1.1",
]
